--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -153,4 +153,26 @@ Zappon and V Zivkovic and C Brezina and K Desch and Y Fu and A Kruth},
   url={http://stacks.iop.org/1748-0221/9/i=05/a=C05013},
   year={2014}
 }
-	
+
+@article{Rubinskiy,
+  author =	 "Rubinskiy, Igor",
+  title =	 "{EUTelescope. Offline track reconstruction and DUT
+                  analysis software.}",
+  month =	 "Dec",
+  year =	 2010,
+  number =	 "EUDET-Memo-2010-12",
+  url =
+                  "http://www.eudet.org/e26/e28/e86887/e107460/EUDET-Memo-2010-12.pdf"
+}
+
+@article{Gaede:2006pj,
+  author =	 "Gaede, F.",
+  title =	 "{Marlin and LCCD: Software tools for the ILC}",
+  note =	 "{Proceedings of the 10th International Workshop on
+                  Advanced computing and analysis techniques in
+                  physics research, ACAT05, Zeuthen, Germany, May
+                  22-27, 2005}",
+  journal =	 "Nucl. Instrum. Meth.",
+  volume =	 "A559",
+  year =	 2006,
+}
