--- a/CLICdp_definitions.sty
+++ b/CLICdp_definitions.sty
@@ -79,6 +79,7 @@
 \newcommand{\microwatt}{\ensuremath{\upmu\mathrm{W}}\xspace}
 \newcommand{\ev}{\ensuremath{\mathrm{\,e\kern -0.1em V}}\xspace}
 \newcommand{\kev}{\ensuremath{\mathrm{\,ke\kern -0.1em V}}\xspace}
+\newcommand{\gev}{\ensuremath{\mathrm{\,Ge\kern -0.1em V}}\xspace}
 \newcommand{\tev}{\ensuremath{\mathrm{\,Te\kern -0.1em V}}\xspace}
 \newcommand{\pev}{\ensuremath{\mathrm{\,Pe\kern -0.1em V}}\xspace}
 \newcommand{\megahertz}{\ensuremath{\mathrm{MHz}}\xspace}
