--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -176,3 +176,30 @@ Zappon and V Zivkovic and C Brezina and K Desch and Y Fu and A Kruth},
   volume =	 "A559",
   year =	 2006,
 }
+
+@article{Blobel20065,
+title = "Software alignment for tracking detectors ",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+volume = "566",
+number = "1",
+pages = "5 - 13",
+year = "2006",
+%note = "\{TIME\} 2005Proceedings of the 1st Workshop on Tracking in High Multiplicity Environments1st Workshop on Tracking in High Multiplicity Environments ",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/j.nima.2006.05.157",
+url = "http://www.sciencedirect.com/science/article/pii/S0168900206007984",
+author = "V. Blobel",
+keywords = "Track fitting",
+keywords = "Track detector alignment",
+keywords = "Global least-squares fit "
+}
+
+@online{pyeudet,
+      title          = "pyEudetAnalysis",
+      url            = "https://github.com/pyEudetAnalysis/pyEudetAnalysis"
+}
+
+@online{allpix,
+      title          = "AllPix",
+      url            = "https://github.com/ALLPix/allpix"
+}
