Process flow for the TCAD simulation of active-edge sensors.

--- a/CLICdp_definitions.sty
+++ b/CLICdp_definitions.sty
@@ -84,6 +84,7 @@
 \newcommand{\pev}{\ensuremath{\mathrm{\,Pe\kern -0.1em V}}\xspace}
 \newcommand{\megahertz}{\ensuremath{\mathrm{MHz}}\xspace}
 \newcommand{\cmsquared}{\ensuremath{\text{cm}^{2}}\xspace}
+\newcommand{\inversecmcubic}{\ensuremath{\text{cm}^{-3}}\xspace}
 
 %% text shortcuts
 \newcommand{\eg}{e.g.\xspace}
