--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -35,6 +35,7 @@
 
 % nalipour packages
 \usepackage{amsmath,mathtools}
+\usepackage{cleveref} % For the cref (clever reference)
 %------------------------------------------------------------------------------
 % Instead of colouring  links, cites, table of contents etc.
 % put them in a coloured box for the screen version.
