--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -203,3 +203,15 @@ keywords = "Global least-squares fit "
       title          = "AllPix",
       url            = "https://github.com/ALLPix/allpix"
 }
+
+@article{1748-0221-6-01-C01046,
+  author =	 {D Turecek and T Holy and J Jakubek and S Pospisil
+                  and Z Vykydal},
+  title =	 {Pixelman: a multi-platform data acquisition and
+                  processing software package for Medipix2, Timepix
+                  and Medipix3 detectors},
+  journal =	 {JINST},
+  volume =	 6,
+  pages =	 {C01046},
+  year =	 2011,
+}
