--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -373,10 +373,11 @@ differente from above.
   \item The silicon region is then defined for the two pixels and the
     edge region and an extra silicon edge which will be etched (to make
     the process more realistic). The silicon is doped with borons (p-type material)
-    with the initial resistivity of $\rho=10000 \Omega$cm. 
+    with the initial resistivity of $\rho=10000 \Omega$cm ($4.41\times
+    10^{11}\,\inversecmcubic$). 
   \item A layer of $0.2\,\micron$ thick of Oxide is deposited.
   \item A layer of $0.2\,\micron$ thick of Nitride is deposited.
-  \item The silicon is then doped with a concentration of
+  \item The silicon is then doped with borons with a concentration of
     $10^{12}\,\inversecmcubic$. From the bias scan of the $150\,\micron$ thick
     silicon, the depletion voltage was obtained at 16~V and confirms the
     doping concentration of the silicon. The implantation done is done
