Added the plots on the test-beam from the October 2015 period. Test-beam period of April 2016.

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -1,4 +1,4 @@
-\documentclass[Master,ngerman,UKenglish]{scrbook}
+\documentclass[Master,UKenglish]{scrbook}
 %------------------------------------------------------------------------------
 % This file contains a skeleton thesis for
 % a Physics or Astronomy Institute in the University of Bonn
@@ -35,7 +35,7 @@
 
 % nalipour packages
 \usepackage{amsmath,mathtools}
-\usepackage{cleveref} % For the cref (clever reference)
+\RequirePackage[capitalise,noabbrev]{cleveref} % For the cref (clever reference)
 %------------------------------------------------------------------------------
 % Instead of colouring  links, cites, table of contents etc.
 % put them in a coloured box for the screen version.
