--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -215,3 +215,15 @@ keywords = "Global least-squares fit "
   pages =	 {C01046},
   year =	 2011,
 }
+
+@article{art:tmpx,
+  title =	 "Timepix, a 65k programmable pixel readout chip for
+                  arrival time, energy and/or photon counting
+                  measurements ",
+  journal =	 "NIM",
+  volume =	 "A 581",
+  pages =	 "485 - 494",
+  year =	 2007,
+  author =	 "X. Llopart and R. Ballabriga and M. Campbell and
+                  L. Tlustos and W. Wong",
+}
