--- a/cover_only.tex
+++ b/cover_only.tex
@@ -1,4 +1,4 @@
-\documentclass[Master,Submit,ngerman,UKenglish]{scrbook}
+\documentclass[Master,Submit,UKenglish]{scrbook}
 %------------------------------------------------------------------------------
 % Wrapper for producing cover pages for theses in the
 % a Physics or Astronomy Institute in the University of Bonn
