--- a/PhD_Submit_Title.tex
+++ b/PhD_Submit_Title.tex
@@ -3,7 +3,7 @@
 %
 \title{\thesistitle}
 \subtitle{\vspace*{4ex}
-  \begin{otherlanguage}{ngerman}
+  \begin{otherlanguage}{UKenglish}
     Dissertation\\
     zur\\
     Erlangung des Doktorgrades (Dr.\ rer.\ nat.)\\
@@ -24,7 +24,7 @@
   Bonn \thesisyear
 }
 \lowertitleback{\normalsize
-  \begin{otherlanguage}{ngerman}
+  \begin{otherlanguage}{UKenglish}
     Angefertigt mit Genehmigung der 
     Mathematisch-Naturwissenschaftlichen Fakultät der
     Rheinischen Friedrich-Wilhelms-Universität Bonn
@@ -33,7 +33,7 @@
   \vspace*{10ex minus 4ex}
   
   \noindent
-  \begin{otherlanguage}{ngerman}
+  \begin{otherlanguage}{UKenglish}
     \begin{tabular}{@{}ll}
       \thesisrefereeonetext: & \thesisrefereeone\\
       \thesisrefereetwotext: & \thesisrefereetwo\\[2ex]
