Corrected the dimension of the contact of the guard-ring for the 55-GNDGR

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -202,6 +202,7 @@
 \input{include/CLIC}
 \input{include/Silicon}
 \input{include/Calibration}
+\input{include/Telescope}
 \input{include/ThinSensors}
 \input{include/Extrapolation}
 \input{include/Conclusions}
